# mlinsightcoati

./: CMakeLists.txt  demo.py  requirements.txt  setup.py
src/: MLInsight.cpp  __init__.py
